fix stretch

--- a/src/ui/theme/mixins.scss
+++ b/src/ui/theme/mixins.scss
@@ -3,6 +3,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  right: 0;
   bottom: 0;
 }
 
